--- a/css/not-another-button-component.css
+++ b/css/not-another-button-component.css
@@ -1,46 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap");
-html {
-  font-family: sans-serif;
-  line-height: 1.5;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-body {
-  font-family: "Inter", sans-serif;
-  font-size: 1rem;
-  position: relative;
-  margin: 0;
-  padding: 0;
-  background: #fcfcfc;
-  color: #333;
-  text-rendering: optimizeSpeed;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-small {
-  font-size: 80%;
-}
-
-img {
-  border-style: none;
-}
-
-.container {
-  max-width: 1100px;
-  width: 100%;
-  margin: 0 auto;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  padding: 1.5rem;
-}
-
 .btn {
   display: inline-block;
   color: #fff;
@@ -68,6 +25,9 @@ img {
 .btn:hover {
   background-color: #000810;
   border-color: #000810;
+}
+.btn:focus {
+  outline: 2px solid #002043;
 }
 .btn.btn-primary {
   color: #fff;
@@ -122,4 +82,54 @@ img {
 .btn.btn-error:hover {
   background-color: #ff0e29;
   border-color: #ff0e29;
+}
+.btn.small {
+  padding: 0.1875rem 0.375rem;
+  font-size: 0.75rem;
+}
+.btn.large {
+  padding: 0.75rem 1.5rem;
+  font-size: 1.25rem;
+}
+.btn.disabled {
+  cursor: not-allowed;
+  pointer-events: none;
+  opacity: 0.75;
+}
+
+.btn-group {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+}
+.btn-group.btn-group-horizontal .btn:not(:first-child):not(:last-child) {
+  border-radius: 0;
+  margin-left: -1px;
+}
+.btn-group.btn-group-horizontal .btn:first-child {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.btn-group.btn-group-horizontal .btn:last-child {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  margin-left: -1px;
+}
+.btn-group.btn-group-vertical .btn {
+  display: block;
+  margin-bottom: 0;
+}
+.btn-group.btn-group-vertical .btn:not(:first-child):not(:last-child) {
+  border-radius: 0;
+  margin-top: -1px;
+}
+.btn-group.btn-group-vertical .btn:first-child {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.btn-group.btn-group-vertical .btn:last-child {
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+  margin-top: -1px;
 }
