--- a/not-another-button-component.scss
+++ b/not-another-button-component.scss
@@ -85,6 +85,10 @@ img {
     border-color: darken($default, 10%);
   }
 
+  &:focus {
+    outline: 2px solid $default;
+  }
+
   &.btn-primary {
     color: #fff;
     background-color: $primary;
@@ -141,4 +145,76 @@ img {
       border-color: darken($error, 10%);
     }
   }
+
+  // Size
+
+  &.small {
+    padding: 0.1875rem 0.375rem;
+    font-size: 0.75rem;
+  }
+  &.large {
+    padding: 0.75rem 1.5rem;
+    font-size: 1.25rem;
+  }
+
+  // Disabled
+
+  &.disabled {
+    cursor: not-allowed;
+    pointer-events: none;
+    opacity: 0.75;
+  }
 }
+
+  // Button Group
+
+  .btn-group {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+
+    // Horizontal
+
+    &.btn-group-horizontal {
+      .btn {
+        &:not(:first-child):not(:last-child) {
+          border-radius: 0;
+          margin-left: -1px;
+        }
+        &:first-child {
+          border-top-right-radius: 0;
+          border-bottom-right-radius: 0;
+        }
+        &:last-child {
+          border-top-left-radius: 0;
+          border-bottom-left-radius: 0;
+          margin-left: -1px;
+        }
+      }
+    }
+
+    // Vertical
+
+    &.btn-group-vertical {
+
+      .btn {
+        display: block;
+        margin-bottom: 0;
+        &:not(:first-child):not(:last-child) {
+          border-radius: 0;
+          margin-top: -1px;
+        }
+        &:first-child {
+          border-bottom-right-radius: 0;
+          border-bottom-left-radius: 0;
+        }
+        
+        &:last-child {
+          border-top-right-radius: 0;
+          border-top-left-radius: 0;
+          margin-top: -1px;
+        }
+      }
+    }
+  }
