--- a/source/not-another-button-component.scss
+++ b/source/not-another-button-component.scss
@@ -1,8 +1,8 @@
 // Colours
 
-$default: #002043;
-$primary: #0046a4;
-$secondary: #1166c9;
+$default: #585d6a;
+$primary: #5850EC;
+$secondary: #967adc;
 $success: #14c6a4;
 $warning: #fec800;
 $error: #ff4156;
@@ -21,8 +21,8 @@ $error: #ff4156;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  border: 1px solid $default;
-  padding: 0.375rem 0.75rem;
+  border: 2px solid $default;
+  padding: 0.375rem .75rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 6px;
@@ -134,7 +134,7 @@ $error: #ff4156;
       .btn {
         &:not(:first-child):not(:last-child) {
           border-radius: 0;
-          margin-left: -1px;
+          margin-left: -2px;
         }
         &:first-child {
           border-top-right-radius: 0;
@@ -143,7 +143,7 @@ $error: #ff4156;
         &:last-child {
           border-top-left-radius: 0;
           border-bottom-left-radius: 0;
-          margin-left: -1px;
+          margin-left: -2px;
         }
       }
     }
@@ -157,7 +157,7 @@ $error: #ff4156;
         margin-bottom: 0;
         &:not(:first-child):not(:last-child) {
           border-radius: 0;
-          margin-top: -1px;
+          margin-top: -2px;
         }
         &:first-child {
           border-bottom-right-radius: 0;
@@ -167,7 +167,7 @@ $error: #ff4156;
         &:last-child {
           border-top-right-radius: 0;
           border-top-left-radius: 0;
-          margin-top: -1px;
+          margin-top: -2px;
         }
       }
     }
