--- a/landing-page/css/styles.scss
+++ b/landing-page/css/styles.scss
@@ -3,7 +3,7 @@
 // Colours
 
 $primary: #0046a4;
-$neutral: #FCFCFE;
+$neutral: #f7f7f9;
 $text-colour: #65748b;
 $heading-colour: #11182a;
 
@@ -153,17 +153,7 @@ h1, h2, h3, h4, h5, h6 {
     aspect-ratio: 1 / 1;
     border-radius: 100%;
     opacity: .5;
-    border: 1px solid #e4e5e6;
-
-    &:after {
-        top: 0;
-        content: '';
-        left: 50%;
-        width: 10px;
-        height: 10px;
-        background: blue;
-        border-radius: 50%;
-    }
+    border: 1px solid #dedcfb;
     }
 
     .loop-2 {
@@ -178,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
     aspect-ratio: 1 / 1;
     border-radius: 100%;
     opacity: .4;
-    border: 1px solid #e4e5e6;
+    border: 1px solid #dedcfb;
     }
 
     .loop-3 {
@@ -193,7 +183,7 @@ h1, h2, h3, h4, h5, h6 {
         aspect-ratio: 1 / 1;
         border-radius: 100%;
         opacity: .3;
-        border: 1px solid #e4e5e6;
+        border: 1px solid #dedcfb;
         }
     h1 {
         span {
