--- a/landing-page/css/styles.scss
+++ b/landing-page/css/styles.scss
@@ -152,7 +152,7 @@ h1, h2, h3, h4, h5, h6 {
     flex: 0 0 auto;
     aspect-ratio: 1 / 1;
     border-radius: 100%;
-    opacity: .5;
+    opacity: 1;
     border: 1px solid #dedcfb;
     }
 
@@ -167,7 +167,7 @@ h1, h2, h3, h4, h5, h6 {
     flex: 0 0 auto;
     aspect-ratio: 1 / 1;
     border-radius: 100%;
-    opacity: .4;
+    opacity: .75;
     border: 1px solid #dedcfb;
     }
 
@@ -182,7 +182,7 @@ h1, h2, h3, h4, h5, h6 {
         flex: 0 0 auto;
         aspect-ratio: 1 / 1;
         border-radius: 100%;
-        opacity: .3;
+        opacity: .5;
         border: 1px solid #dedcfb;
         }
     h1 {
