--- a/src/not-another-button-component.scss
+++ b/src/not-another-button-component.scss
@@ -7,16 +7,28 @@ $success: #14c6a4;
 $warning: #fec800;
 $error: #ff4156;
 
+// Spacing
+
+$spacing-small: .375rem;
+$spacing-medium: .75rem;
+$spacing-large: 1.5rem;
+
 // Radius
-$radius-small: 3px;
-$radius-medium: 6px;
-$radius-large: 12px;
+$radius-small: 4px;
+$radius-medium: 8px;
+$radius-large: 16px;
 $radius-circle: 50%;
+
+// Font size
+$font-small: .75rem;
+$font-medium: 1rem;
+$font-large: 1.25rem;
 
 // Buttons Component
 
 .btn {
   display: inline-block;
+  position: relative;
   color: #fff;
   background-color: $default;
   border-color: $default;
@@ -28,14 +40,14 @@ $radius-circle: 50%;
   -ms-user-select: none;
   user-select: none;
   border: 1px solid $default;
-  padding: 0.75rem .75rem;
-  font-size: 1rem;
+  padding: $spacing-medium $spacing-medium;
+  font-size: $font-medium;
   line-height: 1;
   border-radius: $radius-medium;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
   border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   margin-bottom: 0.25rem;
-  font-family: "Inter", sans-serif;
+  font-family: inherit;
   cursor: pointer;
   text-decoration: none;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.05), 0 1px 2px 0 rgba(0, 0, 0, 0.08);
@@ -109,12 +121,12 @@ $radius-circle: 50%;
   // Size
 
   &.small {
-    padding: 0.375rem 0.375rem;
-    font-size: 0.75rem;
+    padding: $spacing-small $spacing-small;
+    font-size: $font-small;
   }
   &.large {
-    padding: 1.5rem 1.5rem;
-    font-size: 1.25rem;
+    padding: $spacing-large $spacing-large;
+    font-size: $font-large;
   }
 
   // Radius
@@ -141,6 +153,41 @@ $radius-circle: 50%;
     cursor: not-allowed;
     pointer-events: none;
     opacity: 0.75;
+  }
+
+  // Loading
+
+  &.loading {
+    color: transparent;
+
+    &:before {
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      position: absolute;
+      left: 50%;
+      margin-left: -8px;
+      content: "";
+      background: 0 0;
+      border: 2px solid #fff;
+      -webkit-clip-path: inset(0 0 50% 0);
+      clip-path: inset(0 0 50% 0);
+      transform: rotate(0);
+      -webkit-animation: spin .6s linear infinite;
+      animation: spin .6s linear infinite;
+    }
+
+    &.btn-outline {
+      &:before {
+        border-color: $default;
+      }
+      &:hover {
+        color: transparent;
+        &:before {
+          border-color: white;
+        }
+      }
+    }
   }
 }
 
@@ -196,3 +243,14 @@ $radius-circle: 50%;
       }
     }
   }
+
+  // Animations
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
