--- a/src/not-another-button-component.scss
+++ b/src/not-another-button-component.scss
@@ -188,6 +188,19 @@ $font-large: 1.25rem;
         }
       }
     }
+    &.small {
+      &:before {
+        width: 12px;
+        height: 12px;
+      }
+    }
+
+    &.large {
+      &:before {
+        width: 22px;
+        height: 22px;
+      }
+    }
   }
 }
 
